styles: fixes to the mobile menu not showing

--- a/styles/global.css
+++ b/styles/global.css
@@ -129,7 +129,6 @@ header {
 }
 .mobile-icon {
  color: rgb(169, 92, 16);
- font-size: 25px;
 }
 .mobile-nav {
  display: none;
